hphp/test/zend/good/bug26281.php
<?php
	$x = 'abc';
	switch ($x[0]) {
		case 'a':
			echo "no crash\n";
			break;
	}
?>